--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ design, solutions, our perfect team, Or just reach us right here, Let&amp;apos;s
 				"https://www.instagram.com/ntu_th/"
 		]
 }</script>
-    <meta name="referrer" content="strict-origin-when-cross-origin" />
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
@@ -118,7 +117,10 @@ design, solutions, our perfect team, Or just reach us right here, Let&amp;apos;s
               <div class="u-layout">
                 <div class="u-layout-row">
                   <div class="u-size-31-sm u-size-31-xs u-size-59-lg u-size-59-xl u-size-60-md">
-                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/7lEuML6WPq0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div class="u-layout-col">
+                      <iframe width="1280" height="720" src="https://www.youtube.com/embed/7lEuML6WPq0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                    </div>
                   </div>
                   <div class="u-size-1-lg u-size-1-xl u-size-29-sm u-size-29-xs u-size-60-md">
                     <div class="u-layout-col">
@@ -452,10 +454,10 @@ design, solutions, our perfect team, Or just reach us right here, Let&amp;apos;s
       C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
       c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           </a>
+          <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCquX91OD5Mh5EuU5_EdEsKA"><span class="u-icon u-social-icon u-social-youtube u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-03c9"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-03c9"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M74.9,33.3H37.3c-7.4,0-13.4,6-13.4,13.4v18.8c0,7.4,6,13.4,13.4,13.4h37.6c7.4,0,13.4-6,13.4-13.4V46.7 C88.3,39.3,82.3,33.3,74.9,33.3L74.9,33.3z M65.9,57l-17.6,8.4c-0.5,0.2-1-0.1-1-0.6V47.5c0-0.5,0.6-0.9,1-0.6l17.6,8.9 C66.4,56,66.4,56.8,65.9,57L65.9,57z"></path></svg></span>
+          </a>
         </div>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      
-    </section>
+    
   
 </body></html>
